2009-02-24 Denton Woods <doomwiz@users.sf.net>
	* vc9 Unicode projects: Changed settings to use x64 and x86 directories for .obj files.
	* test/in: Removed this directory.
	* Added "Test Images" to SVN.
	* il_dds.c (DecompressFloat): Added proper support for G16B16, G32B32, R16 and R32 images.

2009-02-23 Denton Woods <doomwiz@users.sf.net>
	* il_pnm.c: Fixed bug at https://sourceforge.net/forum/message.php?msg_id=6491617 -
	  Changed order of lines 448 and 450.

2009-02-22 Denton Woods <doomwiz@users.sf.net>
	* il_internal.h: Added IL_NO_EXTLIBS define.
	* il_dds-save.c: Removed unused variables.
	* ilu_mipmap.c: Finished redoing all mipmap functions.
	* ilu_mipmap.h: Removed this file.

2009-02-21 Denton Woods <doomwiz@users.sf.net>
	* ilu_mipmap.c: Redid mipmap functions to use iluScale functions instead of nearest.

2009-02-20 Matěj Týč <bubla@users.sf.net>
	* docs/Makefile.am,docs/Devil_manual.texi: Added new ILU images to the
	manual, set the manual license to GFDL.
	* testil, ilur: Licensed under GPL v3

2009-02-19 Denton Woods <doomwiz@users.sf.net>
	* windows_example\resources: Added DevIL Logo.ico, removed OpenIL Logo.ico.
	* windows_example\resource.h: Changed to use DevIL Logo.ico.
	* il_io.c (ilSaveL): Fixed bug where return type was cast to 1 byte.

2009-02-18 Denton Woods <doomwiz@users.sf.net>
	* configure.ac: Added descriptions of more image formats.
	* il_ftx.c (iLoadFtxInternal): Changed to load all FTX images as RGBA.

2009-02-17 Denton Woods <doomwiz@users.sf.net>
	* ilu_mipmap.c: Changed all references of Next to Mipmaps to fix bug noticed at
	  https://sourceforge.net/forum/message.php?msg_id=6443698.
	* Added support for IL_NO_GAMES in il_internal.h.

2009-02-17 Matěj Týč <bubla@users.sf.net>
	* configure.ac, m4/devil-definitions.m4 (TEST_FORMAT): Added an option
	to describe image formats.

2009-02-16 Matěj Týč <bubla@users.sf.net>
	* src-ILU/ilur: Made ilur independent on regex.h